# polyglot

./: .gitignore  readme.md
go/cmd/p2/: main.go
go/cmd/p3/: main.go
projector/go/: go.mod
projector/go/cmd/cli/: main.go
projector/go/pkg/cli/: config.go  config_test.go  opts.go  projector.go  projector_test.go
projector/rust/: Cargo.toml
projector/rust/src/: config.rs  opts.rs  projector.rs
projector/ts/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
projector/ts/src/: config.ts  index.ts  opts.ts  projector.ts
projector/ts/src/__tests__/: config.test.ts  projector.test.ts
rust/: Cargo.toml
rust/src/: main.rs
submarine/go/: go.mod
submarine/go/cmd/p1/: main.go
submarine/ts/src/: p1.ts
ts/: package.json  pnpm-lock.yaml
ts/src/: p2.ts  p3.ts
