[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
collection_macros = "0.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
